# zkint.h

./: .clang-format  .clang-tidy  .gitignore  Build  CMakeLists.txt  LICENSE  Profile  README.md  test.sh
.github/workflows/: ci.yml
docs/: architecture.md
include/: zkint.h
include/zkint/: zkint_c.h  zkint_common.h  zkint_cpp.h
tests/: CMakeLists.txt  test_c.c  test_cpp.cpp  test_perf.cpp
